[package]
name = "eth-metrics"
version = "0.1.0"
authors = ["Nicolas Gotchac <ngotchac@gmail.com>"]

[dependencies]
clap = "2.32.0"
console = "0.7.0"
indicatif = "0.9.0"
gnuplot = "0.0.26"
libc = "0.2.44"
separator = "0.3.1"
statrs = "0.10.0"
tempdir = "0.3.7"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
